@startuml state_machine_no_collision
<style>
stateDiagram {
  FontSize 24
  arrow {
    FontSize 18
  }
}
</style>

[*] --> OPERATIONAL

OPERATIONAL ---> NOT_OPERATIONAL: T16/KILL
NOT_OPERATIONAL ---> [*]
DOCKED ---> [*]

state OPERATIONAL {
[*]-> NO_DEST

NO_DEST --> NO_DEST: T1/R_TURN,\nT2/WALL_FOLLOW
NO_DEST --> SHOULD_TURN_LEFT: T3/FORWARD,\nT4/WALL_FOLLOW
NO_DEST --> SHOULD_TURN_RIGHT: T5/FORWARD,\nT6/WALL_FOLLOW
NO_DEST --> SHOULD_PASS: T7/FORWARD,\nT8/WALL_FOLLOW
NO_DEST --> SHOULD_DOCK: T9/FORWARD,\t\t\t\nT10/WALL_FOLLOW\t\t\t


SHOULD_TURN_LEFT --> SHOULD_TURN_LEFT: T2||T4||T6||T8||\nT10/WALL_FOLLOW
SHOULD_TURN_LEFT --> HANDLE_INTERSECTION: T1||T3||T5||\nT7||T9/L_TURN

SHOULD_TURN_RIGHT --> SHOULD_TURN_RIGHT: \nT2||T4||T6||T8||\nT10/WALL_FOLLOW
SHOULD_TURN_RIGHT --> HANDLE_INTERSECTION: T1||T3||T5||\nT7||T9/R_TURN

SHOULD_PASS --> SHOULD_PASS: \nT2||T4||T6||T8\n||T10/WALL_FOLLOW
SHOULD_PASS --> HANDLE_INTERSECTION: T1||T3||T5||\nT7||T9/FORWARD

SHOULD_DOCK --> SHOULD_DOCK: T2||T4||T6||T8\n||T10/WALL_FOLLOW
SHOULD_DOCK ---> DOCKED: \nT1||T3||T5||\nT7||T9/DOCK


HANDLE_INTERSECTION --> NO_DEST: T2||T4||T6||\nT8||T10/WALL_FOLLOW
HANDLE_INTERSECTION --> HANDLE_INTERSECTION: \nT1||T3||T5||\nT7||T9/FORWARD

COLLISION_NO_DEST --> NO_DEST: T1||T2/R_TURN
COLLISION_NO_DEST --> SHOULD_TURN_LEFT: T3||T4/R_TURN
COLLISION_NO_DEST --> SHOULD_TURN_RIGHT: T5||T6/R_TURN
COLLISION_NO_DEST --> SHOULD_PASS: T7||T8/R_TURN\n
COLLISION_NO_DEST --> SHOULD_DOCK: T9||T10/R_TURN


COLLISION_TURN_LEFT --> SHOULD_TURN_LEFT: T1||T2||T3||T4||T5||T6||\nT7||T8||T9||T10/R_TURN

COLLISION_TURN_RIGHT --> SHOULD_TURN_RIGHT: T1||T2||T3||T4||T5||T6||\nT7||T8||T9||T10/R_TURN

COLLISION_PASS --> SHOULD_PASS: T1||T2||T3||T4||T5||T6||\nT7||T8||T9||T10/R_TURN

COLLISION_DOCK --> SHOULD_DOCK: T1||T2||T3||T4||T5||T6||\nT7||T8||T9||T10/R_TURN

COLLISION_INTERSECTION --> HANDLE_INTERSECTION: T1||T2||T3||T4||T5||T6||\nT7||T8||T9||T10/R_TURN
}
@enduml